--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,10 +1,9 @@
 
 /*
-*= require bootstrap
+= require bootstrap
 *= require_self
 *= require_tree .
 */
-/*@import "bootstrap";*/
 
 #ha{
   background-image: none !important;
