--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,6 @@
-<!-- app/views/layouts/application.html.erb -->
-
 <!DOCTYPE html>
-<html><head>
+<html>
+<head>
   <title>eSavjetovaliste</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
@@ -12,7 +11,8 @@
 	  <%= yield %>  
 
 
-  
+
 <div  id="copyright">© Copyright 2015</div>
 
 </body>
+</html>
