small correction on gui

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,11 @@
   background-size: cover;
 }
 
+a:hover{
+  color:#0B0080 !important;
+  background-color:white !important;
+}
+
 /*design for login form*/
 .form-signin
 {
@@ -289,32 +294,36 @@
   width: 50px;
   height: 50px;
   margin-top: 15px;
-  padding: 7px 16px;
   border: 2px solid #ffffff;
   border-radius: 50%;
   font-size: 40px;
-  color: #ffffff;
+  color: #ffffff !important;
   background: 0 0;
   transition: background .3s ease-in-out;
   position:absolute;
   botom:0;
   left: 620px;
-  text-align: center;
+  line-height:0px;
+  text-align: center !important;
+  vertical-align: middle !important;
+  box-sizing: border-box;
 }
 .btn-circle:hover {
   width: 50px;
   height: 50px;
   margin-top: 15px;
-  padding: 7px 16px;
   border: 2px solid #ffffff;
   border-radius: 50%;
   font-size: 40px;
-  color: #ffffff;
-  background: 0 0;
+  color: #ffffff !important;
+  background: 0 0 !important;
   transition: background .3s ease-in-out;
   botom:0;
   left: 620px;
-  text-align: center;
+  line-height:0px;
+  text-align: center !important;
+  vertical-align: middle !important;
+  box-sizing: border-box;
 }
 .fa-angle-double-down:before {
   content: "\f103";
@@ -361,6 +370,7 @@
 /*end of button circle animation*/
 a {
   text-decoration: none;
+  color:#3366BB !important;
 }
 /*end of disign for circle animated button*/
 
@@ -769,3 +779,8 @@ ul.rating {
   display: inline-block;
   padding: 1px;
 }
+
+.add-on{
+  background-color:white;
+}
+
