--- a/app/assets/javascripts/templates/login.html.erb
+++ b/app/assets/javascripts/templates/login.html.erb
@@ -6,13 +6,15 @@
       <button ng-click="changeLanguage('en')">EN</button>
     </div>  
     <div class="account-wall">
-      <form class="form-signin" name="myForm" ng-controller="LoginController">
+</form>
+      <form class="form-inline" role="form" name="myForm" ng-controller="LoginController">
         <!--title-->
         <h1 class="text-center login-title">eSavjetovaliste</h1>
         <!--input email-->
-        <div class="input-prepend">
-          <span class="add-on"><i class="icon-envelope"></i></span>
-          <input name="email" type="email" class="formr-control" placeholder="E-mail" ng-model="user.email" required autofocus/><br>
+        <div class="form-group has success has-feedback">
+          <label class="control-label" for="inputSuccess4"></label>
+          <input name="email" type="email" class="form-control" placeholder="E-mail" ng-model="user.email" required autofocus id="inputSuccess4">
+          <span class="glyphicon glyphicon-envelope form-control-feedback"></span><br>
           <!--email validation-->
           <span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
             <span ng-show="myForm.email.$error.required">Unos emaila je obavezan.</span>
@@ -21,9 +23,11 @@
         </div>
 
         <!-- input password-->
-        <div class="input-prepend">
-          <span class="add-on"><i class="icon-lock"></i></span>
-          <input name="password" type="password" minlength="3" class="formr-control" placeholder="Šifra" ng-model="user.password"  required/><br>
+        <div class="form-group has success has-feedback">
+          <label class="control-label" for="inputSuccess4"></label>
+          <input name="password" type="password" minlength="3" class="form-control" placeholder="Šifra" ng-model="user.password"  required id="inputSuccess4">
+          <span class="glyphicon glyphicon-lock form-control-feedback"></span><br>
+          <br>
           <!--password validation (client side)-->
           <span style="color:red" ng-show="myForm.password.$dirty && myForm.password.$invalid">
               <span ng-show="myForm.password.$error.required">Unos pasvorda je obavezan.</span>Pasvord mora imati više od 3 karaktera.
