--- a/app/assets/javascripts/templates/register.html.erb
+++ b/app/assets/javascripts/templates/register.html.erb
@@ -13,7 +13,7 @@
 
 			  	<!-- input name-->
 			  	<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-user"></i></span>
+	      			<span class="add-on"><i class="glyphicon-user"></i></span>
 				  	<input name="name" pattern="^([A-z]){3,}$" maxlength="20" class="formr-control" type="text" placeholder="Ime" ng-model="user.name" required autofocus/>
 				  	<br>
 				  	<!--name validation (client side)-->
@@ -24,7 +24,7 @@
 
 				<!-- input surname-->
 				<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-user"></i></span>
+	      			<span class="add-on"><i class="glyphicon-user"></i></span>
 				  	<input name="surname" pattern="^([A-z]){3,}$" maxlength="25" type="text" class="formr-control" placeholder="Prezime" ng-model="user.surname" required/><br>
 				  	<!--surname validation (client side)-->
 				  	<span style="color:red" ng-show="myForm.surname.$dirty && myForm.surname.$invalid">
@@ -34,7 +34,7 @@
 
 				<!-- input job-->
 				<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-briefcase"></i></span>
+	      			<span class="add-on"><i class="glyphicon-briefcase"></i></span>
 				  	<input name="job" type="text" pattern="^([A-z]){2,}$" maxlength="35" class="formr-control" placeholder= "Posao" ng-model="user.job" /><br>
 				  	<!--job validation (client side)-->
 				  	<span style="color:red" ng-show="myForm.job.$dirty && myForm.job.$invalid">Posao mora sadržavati više od 2 karaktera.
@@ -43,19 +43,19 @@
 
 				<!-- input adress-->
 				<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-map-marker"></i></span>
+	      			<span class="add-on"><i class="glyphicon-map-marker"></i></span>
 				  	<input name="adress" type="text" class="formr-control" placeholder="Adresa" ng-model="user.adress" />
 				</div>
 
 				<!-- input phone-->
 				<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-home"></i></span>
+	      			<span class="add-on"><i class="glyphicon-home"></i></span>
 				  	<input name="phone" type="text" class="formr-control" placeholder="Telefon" ng-model="user.phone" />
 				</div>
 
 				<!-- input email-->
 				<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-envelope"></i></span>
+	      			<span class="add-on"><i class="glyphicon-envelope"></i></span>
 				  	<input name="email" type="email" class="formr-control" placeholder="E-mail" ng-model="user.email" required /><br>
 				  	<!--email validation (client side)-->
 				  	<span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
@@ -66,7 +66,7 @@
 
 				<!-- input password-->
 				<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-lock"></i></span>
+	      			<span class="add-on"><i class="glyphicon-lock"></i></span>
 				  	<input name="password" type="password" minlength="3" class="formr-control" placeholder="Šifra" ng-model="user.password"  required/><br>
 				  	<!--password validation (client side)-->
 				  	<span style="color:red" ng-show="myForm.password.$dirty && myForm.password.$invalid">
@@ -76,7 +76,7 @@
 
 				<!-- input password confirmation-->
 				<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-lock"></i></span>
+	      			<span class="add-on"><i class="glyphicon-lock"></i></span>
 				  	<input name="passwordc" type="password" class="formr-control" placeholder= "Potvrda šifre" ng-model="user.password_confirmation" />
 				</div>
 
