#Added editing data about user by manager

--- a/app/assets/javascripts/templates/edit_user_by_manager.html.erb
+++ b/app/assets/javascripts/templates/edit_user_by_manager.html.erb
@@ -71,9 +71,9 @@
                     </select>
                 </div>
 
-				<!-- submit button TBD osposobiti i dodati sta treba-->
+				<!-- submit button TBD osposobiti i dodati sta treba ng-disabled="myForm.$invalid DODATI-->
 				<div class="actions">
-				  <button class="btn btn-lg btn-primary btn-block" ng-click="editUser()"  ng-disabled="myForm.$invalid">Izmijeni</button>
+				  <button class="btn btn-lg btn-primary btn-block" ng-click="editUser()"  >Izmijeni</button>
 				</div>
 				
 			  </form>
