--- a/app/assets/javascripts/templates/home_admin.html.erb
+++ b/app/assets/javascripts/templates/home_admin.html.erb
@@ -3,32 +3,8 @@
     <!--font for icon in circle button on home page-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
-<body data-spy="scroll" data-target=".navbar-custom" id="ha" >
-    <!-- Navigation bar -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container" ng-controller="HomeAdminController">
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand" href="#/home_admin">
-                    <h1 class="naslov1">eSavjetovaliste</h1>
-                </a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href>{{ 'HOME' | translate }}</a></li>
-                <li><a href>{{ 'ABOUT' | translate }}</a></li>
-                <li><a href ng-click="openChangePass()">{{ 'CHANGE_PASS' | translate }}</a></li>
-                <li><a href ng-click="logout()">{{ 'LOGOUT' | translate }}</a></li>
-              </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-</body>
+<div class="admin-navbar" admin-navbar></div>
+
 </br></br></br>
 
 <div class="heading-contact-title">
