#Added directive for localization

--- a/app/assets/javascripts/templates/login.html.erb
+++ b/app/assets/javascripts/templates/login.html.erb
@@ -1,10 +1,7 @@
 <!--Login form-->
 <div class="container">  
   <div class="bcg" style="height:600px">  
-    <div ng-controller="LanguageController">
-      <button ng-click="changeLanguage('bs')">BS</button>
-      <button ng-click="changeLanguage('en')">EN</button>
-    </div>  
+    <div class="localization-bs-en" localization-bs-en></div> 
     <div class="account-wall">
       
 </form>
