#added localization directive into home.html.erb

--- a/app/assets/javascripts/templates/home.html.erb
+++ b/app/assets/javascripts/templates/home.html.erb
@@ -63,10 +63,7 @@ h2{
     <div  ng-controller="HomeController">
     <!-- Navigation bar -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div ng-controller="LanguageController">
-          <button ng-click="changeLanguage('bs')">BS</button>
-          <button ng-click="changeLanguage('en')">EN</button>
-        </div>
+        <div class="localization-bs-en" localization-bs-en></div>
         <div class="container">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
