corrections on design
new version of bootstrap

--- a/app/assets/javascripts/templates/login.html.erb
+++ b/app/assets/javascripts/templates/login.html.erb
@@ -5,7 +5,7 @@
     <div class="account-wall">
       
 </form>
-      <form class="form-inline" role="form" name="myForm" ng-controller="LoginController">
+      <form class="form-signin form-inline" role="form" name="myForm" ng-controller="LoginController">
         <!--title-->
         <h1 class="text-center login-title">eSavjetovaliste</h1>
         <!--input email-->
@@ -51,3 +51,4 @@
       </div>
   </div>
 </div>
+<div id="copyright">© Copyright 2015</div>
