--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,12 +36,20 @@ a:hover{
 {
     font-weight: normal;
 }
+.form-signin .btn
+{
+    height:30px;
+    font-size:15px;
+    line-height: 0.5;
+}
 .form-signin .form-control
 {
     position: relative;
     font-size: 16px;
     height: auto;
     padding: 10px;
+    width:320px;
+    height:30px;
 }
 .form-signin .form-control:focus
 {
@@ -53,13 +61,14 @@ a:hover{
 }
 .form-signin input[type="text"]
 {
-    margin-bottom: -1px;
+    margin-bottom: 50px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
 .form-signin input[type="password"]
 {
-    margin-bottom: 10px;
+    margin-bottom: 1px;
+    margin-top:10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
@@ -135,6 +144,8 @@ a:hover{
 #copyright{
   display: block;
   text-align:center;
+  bottom:0;
+  clear:both;
 }
 .footer{
   display: block;
@@ -177,28 +188,37 @@ a:hover{
     padding: 0px;
     margin: 0 auto;
 }
-.form-register .formr-control
+.form-register .form-control
 {
     position: relative;
     font-size: 16px;
-    height: auto;
-    padding: 7px; 
+    padding: 7px;
+    width:320px !important;
+    height:30px; 
 }
-.form-register .formr-control:focus
+.form-register .btn
+{
+    position: relative;
+    font-size: 16px;
+    padding: 7px;
+    width:328px !important;
+    height:30px; 
+}
+.form-register .form-control:focus
 {
     z-index: 2;
 }
-.formr-control
+.form-control
 {
     width:285px;
 }
-.formr-signin input[type="text"]
+.form-signin input[type="text"]
 {
     margin-bottom: -1px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
-.formr-signin input[type="password"]
+.form-signin input[type="password"]
 {
     margin-bottom: 10px;
     border-top-left-radius: 0;
@@ -472,6 +492,7 @@ h1.naslov1{
   letter-spacing: 1px;
   position:absolute;
   top:10px;
+  left:202px;
 }
 #main-title{
   position:absolute;
@@ -607,6 +628,7 @@ h1.naslov1{
 .boxed-grey {
   background: #f9f9f9;
   padding: 20px;
+  width:800px;
 }
 .col-md-6 {
   width: 50%;
@@ -645,6 +667,9 @@ form#contact-form input, form#contact-form select, form#contact-form textarea {
   border: 1px solid #eee;
   box-shadow: none;
 }
+#contact-form{
+  margin-bottom:50px;
+}
 #msg{
   position:absolute;
   left:400px;
@@ -665,13 +690,13 @@ form#contact-form input, form#contact-form select, form#contact-form textarea {
 /*end of design for feedback form*/
 /*design for home_Admin*/
 .col-md-3 {
-  width: 25%;
+  width: 20%;
   float: left;
   position: relative;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
-  margin-left:70px;
+  margin-left:50px;
 }
 .service-icon {
   margin-bottom: 20px;
@@ -717,7 +742,7 @@ img {
 }
 /*end of homeAdmin animation*/
 .normal{
-  color:#000000;
+  color:#000000 !important;
 }
 /*end of design for home_Admin*/
 /*design for feedback_admin*/
@@ -769,6 +794,7 @@ ul.rating {
 .quoteBlock > div {
   padding: 30px;
   background: url('/assets/quoteBg.png');
+  margin-top:20px;
 }
 
 .fa-quote-right:before, .fa-quote-left:before{
@@ -782,5 +808,9 @@ ul.rating {
 
 .add-on{
   background-color:white;
+}
+
+a.white:hover {
+  background-color:#0099CC !important;
 }
 
