last commit fix

--- a/app/assets/javascripts/templates/home.html.erb
+++ b/app/assets/javascripts/templates/home.html.erb
@@ -97,7 +97,7 @@ h2{
     <!-- /Section: intro -->
 
 <!--image slider-->
-    </br></br></br></br>
+    </br></br></br></br></br></br>
     <div class="bs-example">
         <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
             <!-- Carousel items -->
@@ -108,8 +108,8 @@ h2{
                             <div class="slide quoteBlock col-sm-6 col-md-4" style="width: 433px;">
                                 <div>
                                     <i class="fa fa-quote-left"></i>
-                                    <p>I’m always on the clock, sometimes it feels like I work 24/7 and barely have time to schedule dinner with my wife. It’s so easy to decompress with a listener on my crazy schedule. I can just call in on my way home from work and it isn’t an ordeal like scheduling a therapist. Plus, my wife gets to enjoy me a little less stressed.</p>
-                                    <h5 class="cupBlue">Graham C. <em>North Carolina</em></h5>
+                                    <p>Muz i ja smo ljetos isli na preventivni pregled. Vrlo ljubazno osoblje, doktori su sve objasnjavali tokom pregleda, nalazi bili brzo gotovi, cak su pitali treba li pisati na engleskom nalaze (nije trebalo jer nase medicinsko osiguranje ima svoje prevodioce). Imaju razne pakete - mi smo isli na D paket.</p>
+                                    <h5 class="cupBlue">Emina M. <em>Sarajevo</em></h5>
                                     <i class="fa fa-quote-right"></i>
                                 </div>
                             </div>
@@ -118,8 +118,8 @@ h2{
                             <div class="slide quoteBlock col-sm-6 col-md-4" style="width: 433px;">
                                 <div>
                                     <i class="fa fa-quote-left"></i>
-                                    <p>I’m always on the clock, sometimes it feels like I work 24/7 and barely have time to schedule dinner with my wife. It’s so easy to decompress with a listener on my crazy schedule. I can just call in on my way home from work and it isn’t an ordeal like scheduling a therapist. Plus, my wife gets to enjoy me a little less stressed.</p>
-                                    <h5 class="cupBlue">Graham C. <em>North Carolina</em></h5>
+                                    <p>Najprofesionalnije osoblje. Moja porodica i ja smo vec 12 godina pacijenti ove poliklinike i imamo odlicno iskustvom. Pravi su profesionalci a sve se moze obaviti na jednom mjestu - internisticki pregledi, holteri EKG i pritsika, kompletna labaratorija i ultrazvuci. Profesionalci.</p>
+                                    <h5 class="cupBlue">Dino P. <em>Mostar</em></h5>
                                     <i class="fa fa-quote-right"></i>
                                 </div>
                             </div>
@@ -132,8 +132,8 @@ h2{
                             <div class="slide quoteBlock col-sm-6 col-md-4" style="width: 433px;">
                                 <div>
                                     <i class="fa fa-quote-left"></i>
-                                    <p>I’m always on the clock, sometimes it feels like I work 24/7 and barely have time to schedule dinner with my wife. It’s so easy to decompress with a listener on my crazy schedule. I can just call in on my way home from work and it isn’t an ordeal like scheduling a therapist. Plus, my wife gets to enjoy me a little less stressed.</p>
-                                    <h5 class="cupBlue">Graham C. <em>North Carolina</em></h5>
+                                    <p>Ja sam VEEEOMA zadovoljna Poliklinikom. Nikad do sad niko mi nije tako sve objasnio i odgovorio na milion mojih postavljenih pitanja upucenih doktorici,ona je ginekolog. Do sad kuci odem vazda jos vise zbunjena.Ove doktore ja preporucujem svima, imaju nevjerovatno znanje i iskustvo i posvete maksimalnu paznju.</p>
+                                    <h5 class="cupBlue">Azra B. <em>Sarajevo</em></h5>
                                     <i class="fa fa-quote-right"></i>
                                 </div>
                             </div>
@@ -142,8 +142,8 @@ h2{
                             <div class="slide quoteBlock col-sm-6 col-md-4" style="width: 433px;">
                                 <div>
                                     <i class="fa fa-quote-left"></i>
-                                    <p>I’m always on the clock, sometimes it feels like I work 24/7 and barely have time to schedule dinner with my wife. It’s so easy to decompress with a listener on my crazy schedule. I can just call in on my way home from work and it isn’t an ordeal like scheduling a therapist. Plus, my wife gets to enjoy me a little less stressed.</p>
-                                    <h5 class="cupBlue">Graham C. <em>North Carolina</em></h5>
+                                    <p>Prof. Klapana želim preporučiti svakome tko ima problem u njegovom području ekspertize. Operirala sam devijaciju septuma prije četiri mjeseca i od tada nemam baš nikakvih problema s upalama, sinusitisom, glavoboljama, prehladama, alergijama, umorom ili disanjem, što je prije često bio slučaj. </p>
+                                    <h5 class="cupBlue">Silvana I. <em>Bihac</em></h5>
                                     <i class="fa fa-quote-right"></i>
                                 </div>
                             </div>
@@ -156,8 +156,9 @@ h2{
                             <div class="slide quoteBlock col-sm-6 col-md-4" style="width: 433px;">
                                 <div>
                                     <i class="fa fa-quote-left"></i>
-                                    <p>I’m always on the clock, sometimes it feels like I work 24/7 and barely have time to schedule dinner with my wife. It’s so easy to decompress with a listener on my crazy schedule. I can just call in on my way home from work and it isn’t an ordeal like scheduling a therapist. Plus, my wife gets to enjoy me a little less stressed.</p>
-                                    <h5 class="cupBlue">Graham C. <em>North Carolina</em></h5>
+                                    <p>Besplatne konsultacije nisu slucaj nigdje niti u jednoj Privatnoj klinici da mozes otici i nesto zavrsiti besplatno. Svaka cast na tome. Osoblje je preljubazno. Doktori su strucni. Od srca hvala profesoru Edinu kao i njegovom divnom osoblju!
+                                    </p>
+                                    <h5 class="cupBlue">Maja H. <em>Sarajevo</em></h5>
                                     <i class="fa fa-quote-right"></i>
                                 </div>
                             </div>
@@ -166,8 +167,8 @@ h2{
                             <div class="slide quoteBlock col-sm-6 col-md-4" style="width: 433px;">
                                 <div>
                                     <i class="fa fa-quote-left"></i>
-                                    <p>I’m always on the clock, sometimes it feels like I work 24/7 and barely have time to schedule dinner with my wife. It’s so easy to decompress with a listener on my crazy schedule. I can just call in on my way home from work and it isn’t an ordeal like scheduling a therapist. Plus, my wife gets to enjoy me a little less stressed.</p>
-                                    <h5 class="cupBlue">Graham C. <em>North Carolina</em></h5>
+                                    <p>Prof. Mehmed je izuzetno stručan i ugodan, te je cijeli operativni proces, kao i dio prije i nakon operacije, učinio lakšim i bezbolnijim. Takvo je i cijelo osoblje Poliklinike. Bez pretjerivanja- operacija mi je ostala u ugodnom sjećanju</p>
+                                    <h5 class="cupBlue">Edna J. <em>Zenica</em></h5>
                                     <i class="fa fa-quote-right"></i>
                                 </div>
                             </div>
@@ -179,16 +180,16 @@ h2{
         <!-- Controls buttons -->
         <div class="control-buttons">
             <div class="btn-group">
-              <a class="btn btn-info start-slide" href="#"><i class="icon-play icon-white"></i></a>
+              <a class="btn btn-info start-slide white"> <i class="glyphicon glyphicon-play" style="color:white"></i></a>
             </div>
             <div class="btn-group">
-              <a class="btn btn-info pause-slide" href="#"><i class="icon-stop icon-white"></i></a>
+              <a class="btn btn-info pause-slide white"><i class="glyphicon glyphicon-stop" style="color:white"></i></a>
             </div>
             <div class="btn-group">
-              <a class="btn btn-info prev-slide" href="#"><i class="icon-chevron-left icon-white"></i></a>
+              <a class="btn btn-info prev-slide white"><i class="glyphicon glyphicon-chevron-left" style="color:white"></i></a>
             </div>
             <div class="btn-group">
-              <a class="btn btn btn-info next-slide" href="#"><i class="icon-chevron-right icon-white"></i></a>
+              <a class="btn btn-info next-slide white"><i class="glyphicon glyphicon-chevron-right" style="color:white"></i></a>
             </div>   
             <input type="button" class="btn btn-info slide-one" value="1">
             <input type="button" class="btn btn-info slide-two" value="2">            
@@ -338,6 +339,7 @@ h2{
 
     <!--Footer-->
     <div class="footer">
+        <div id="copyright">© Copyright 2015</div>
             <div class="page-scroll">
                 <a href="#/home" class="btn btn-circle">
                     <i class="fa fa-angle-double-up pulse animated"></i>
@@ -345,5 +347,4 @@ h2{
             </div>
     </div>
     <!--/.Footer-->
-    </div>
 </body>
