--- a/app/assets/javascripts/templates/home_admin.html.erb
+++ b/app/assets/javascripts/templates/home_admin.html.erb
@@ -3,7 +3,7 @@
     <!--font for icon in circle button on home page-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
-<div class="admin-navbar" admin-navbar></div>
+<div class="navbar" navbar></div>
 
 </br></br></br>
 
