--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,6 +5,12 @@
 *= require_tree .
 */
 
+* {
+  font-family: 'Open Sans', sans-serif;
+}
+tbody > tr > td {
+  font-family: 'Open Sans', sans-serif;
+}
 #ha{
   background-image: none !important;
 }
