--- a/app/assets/javascripts/templates/home.html.erb
+++ b/app/assets/javascripts/templates/home.html.erb
@@ -62,30 +62,7 @@ h2{
   <div class="bcgwhite" style="height:1000px">
     <div  ng-controller="HomeController">
     <!-- Navigation bar -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="localization-bs-en" localization-bs-en></div>
-        <div class="container">
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand" href="#/home">
-                    <h1 class="naslov1">eSavjetovaliste</h1>
-                </a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a>{{ 'HOME' | translate }}</a></li>
-                <li><a>{{ 'ABOUT' | translate }}</a></li>
-                <li><a href ng-click="openChangePass()">{{ 'CHANGE_PASS' | translate }}</a></li>
-                <li><a href ng-click="logout()">{{ 'LOGOUT' | translate }}</a></li>
-              </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+    <div class="navbar" navbar></div>
  
     <!-- Section: intro -->
     <section id="intro" class="intro">
