--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>eSavjetovaliste</title>
-  <%= stylesheet_link_tag    "application", media: "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body class="bcgnone">
-
-	  <%= yield %>  
-
-
-
-
-
-</body>
+	<head>
+	  <title>eSavjetovaliste</title>
+	  <%= stylesheet_link_tag    "application", media: "all" %>
+	  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	  <%= javascript_include_tag "application" %>
+	  <%= csrf_meta_tags %>
+	</head>
+	<body class="bcgnone">
+		 <%= yield %>  
+	</body>
 </html>
