--- a/app/assets/javascripts/templates/edit_user_by_manager.html.erb
+++ b/app/assets/javascripts/templates/edit_user_by_manager.html.erb
@@ -7,56 +7,71 @@
 	<div class="container">    
 	<div class="bcg" style="height:600px">
 	    <div class="register-wall">                      <!-- TBD dodati ovaj kontroler!-->
-			<form class="form-register" name="myForm" ng-controller="EditUserByManagerController">  
+			<form class="form-register form-inline" role="form" name="myForm" ng-controller="EditUserByManagerController">  
 
 			  	<h1 class="text-center login-title"> Izmjena podataka o korisniku </h1>
 
 			  	<!-- input name-->
-			  	<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-user"></i></span>
-				  	<input name="name" pattern="^([A-z]){3,}$" maxlength="20" class="formr-control" type="text" placeholder="Ime" ng-model="user.name" required autofocus/>
-				  	<br>
+			  	<div class="input-prepend form-group has success has-feedback">
+			  		<label class="control-label" for="inputSuccess4"></label>
+				  	<input name="name" pattern="^([A-z]){3,}$" maxlength="20" class="form-control" type="text" placeholder="Ime" ng-model="user.name" required autofocus id="inputSuccess4"/>
+				  	<span class="glyphicon glyphicon-user form-control-feedback"></span></br></br>
 				  	<!--name validation (client side)-->
 					<span style="color:red" ng-show="myForm.name.$dirty && myForm.name.$invalid">
 						<span ng-show="myForm.name.$error.required">Unos imena je obavezan.</span>Ime mora sadržavati više od 3 karaktera.
 					</span>	
 			    </div>
 
-				<!-- input surname-- >
-				<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-user"></i></span>
-				  	<input name="surname" pattern="^([A-z]){3,}$" maxlength="25" type="text" class="formr-control" placeholder="Prezime" ng-model="user.surname" required/><br>
+			    <!-- input surname-->
+			  	<div class="input-prepend form-group has success has-feedback">
+			  		<label class="control-label" for="inputSuccess4"></label>
+				  	<input name="surname" pattern="^([A-z]){3,}$" maxlength="25" type="text" class="form-control" placeholder="Prezime" ng-model="user.surname" required id="inputSuccess4"/>
+				  	<span class="glyphicon glyphicon-user form-control-feedback"></span></br></br>
 				  	<!--surname validation (client side)-->
-				  	<span style="color:red" ng-show="myForm.surname.$dirty && myForm.surname.$invalid">
+					<span style="color:red" ng-show="myForm.surname.$dirty && myForm.surname.$invalid">
 				    	<span ng-show="myForm.surname.$error.required">Unos prezimena je obavezan.</span>Prezime mora sadržavati više od 3 karaktera.
-				    </span>	
-				</div>
+				    </span>		
+			    </div>
+
+			    <!-- input job-->
+			  	<div class="input-prepend form-group has success has-feedback">
+			  		<label class="control-label" for="inputSuccess4"></label>
+				  	<input name="job" type="text" pattern="^([A-z]){2,}$" maxlength="35" class="form-control" placeholder= "Posao" ng-model="user.job" id="inputSuccess4"/>
+				  	<span class="glyphicon glyphicon-briefcase form-control-feedback"></span></br></br>
+				  	<!--job validation (client side)-->
+				  	<span style="color:red" ng-show="myForm.job.$dirty && myForm.job.$invalid">Posao mora sadržavati više od 2 karaktera.
+				    </span>		
+			    </div>
 
 				<!-- input job-->
-				<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-briefcase"></i></span>
-				  	<input name="job" type="text" pattern="^([A-z]){2,}$" maxlength="35" class="formr-control" placeholder= "Posao" ng-model="user.job" /><br>
+				<div class="input-prepend form-group has success has-feedback">
+					<label class="control-label" for="inputSuccess4"></label>
+				  	<input name="job" type="text" pattern="^([A-z]){2,}$" maxlength="35" class="form-control" placeholder= "Posao" ng-model="user.job" id="inputSuccess4" />
+				  	<span class="glyphicon glyphicon-map-marker form-control-feedback"></span></br></br>
 				  	<!--job validation (client side)-->
 				  	<span style="color:red" ng-show="myForm.job.$dirty && myForm.job.$invalid">Posao mora sadržavati više od 2 karaktera.
 				    </span>	
 				</div>
 
 				<!-- input adress -->
-				<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-map-marker"></i></span>
-				  	<input name="adress" type="text" class="formr-control" placeholder="Adresa" ng-model="user.adress" />
+				<div class="input-prepend form-group has success has-feedback">
+					<label class="control-label" for="inputSuccess4"></label>
+				  	<input name="adress" type="text" class="form-control" placeholder="Adresa" ng-model="user.adress"  id="inputSuccess4"/>
+				  	<span class="glyphicon glyphicon-map-marker form-control-feedback"></span></br></br>
 				</div>
 
 				<!-- input phone-->
-				<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-home"></i></span>
-				  	<input name="phone" type="text" class="formr-control" placeholder="Telefon" ng-model="user.phone" />
+				<div class="input-prepend form-group has success has-feedback">
+					<label class="control-label" for="inputSuccess4"></label>
+				  	<input name="phone" type="text" class="form-control" placeholder="Telefon" ng-model="user.phone"  id="inputSuccess4"/>
+				  	<span class="glyphicon glyphicon-home form-control-feedback"></span></br></br>
 				</div>
 
 				<!-- input email-->
-				<div class="input-prepend">
-	      			<span class="add-on"><i class="icon-envelope"></i></span>
-				  	<input name="email" type="email" class="formr-control" placeholder="E-mail" ng-model="user.email" required /><br>
+				<div class="input-prepend form-group has success has-feedback">
+					<label class="control-label" for="inputSuccess4"></label>
+				  	<input name="email" type="email" class="form-control" placeholder="E-mail" ng-model="user.email" required  id="inputSuccess4"/>
+				  	<span class="glyphicon glyphicon-envelope form-control-feedback"></span></br></br>
 				  	<!--email validation (client side)-->
 				  	<span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
 						<span ng-show="myForm.email.$error.required">Unos emaila je obavezan.</span>
@@ -65,12 +80,12 @@
 				</div>
 
 				<!-- input role -->
-				<div class="input-prepend">
-                    <span class="add-on"><i class="icon-lock"></i></span>
-                    <select class="formr-control" ng-model="role" ng-options="role.name for role in roles track by role.id" required>
+				<div class="input-prepend form-group has success has-feedback">
+					<label class="control-label" for="inputSuccess4"></label>
+                    <select class="form-control" ng-model="role" ng-options="role.name for role in roles track by role.id" required id="inputSuccess4"></br></br>
                     </select>
                 </div>
-
+</br></br>
 				<!-- submit button TBD osposobiti i dodati sta treba ng-disabled="myForm.$invalid DODATI-->
 				<div class="actions">
 				  <button class="btn btn-lg btn-primary btn-block" ng-click="editUser()"  >Izmijeni</button>
@@ -80,6 +95,5 @@
 			</div>
 		</div>
 		</div>
-	</div>
 	<div id="copyright">© Copyright 2015</div>
 </body>
