--- a/app/assets/javascripts/templates/inputs-password-reset.html.erb
+++ b/app/assets/javascripts/templates/inputs-password-reset.html.erb
@@ -2,14 +2,15 @@
 <div class="container">
 	<div class="bcg" style="height:600px">     
 		<div class="reset-pass">
-		    <form class="form-signin" name="myForm" ng-controller="InsertPwdForResetController">
+		    <form class="form-signin form-inline" role="form" name="myForm" ng-controller="InsertPwdForResetController">
 		    	<!--title-->
 		    	<h1 class="text-center login-title">eSavjetovaliste</h1>
 
 		    	<!-- input password-->
-				<div class="input-prepend">
-		      		<span class="add-on"><i class="icon-lock"></i></span>
-					<input name="password" type="password" minlength="3" class="formr-control" placeholder="Šifra" ng-model="user.password" required autofocus/><br>
+				<div class="input-prepend form-group has success has-feedback">
+					<label class="control-label" for="inputSuccess4"></label>
+					<input name="password" type="password" minlength="3" class="form-control" placeholder="Šifra" ng-model="user.password" required autofocus/>
+					<span class="glyphicon glyphicon-lock form-control-feedback"></span>
 					<!--password validation (client side)-->
 					<span style="color:red" ng-show="myForm.password.$dirty && myForm.password.$invalid">
 					    <span ng-show="myForm.password.$error.required">Unos pasvorda je obavezan.</span>Pasvord mora imati više od 3 karaktera.
@@ -17,9 +18,10 @@
 				</div>
 
 				<!--input password confirmation-->
-				<div class="input-prepend">
-		  			<span class="add-on"><i class="icon-lock"></i></span>
-				  	<input name="passwordc" type="password" class="formr-control" placeholder= "Potvrda šifre" ng-model="user.password_confirmation" />
+				<div class="input-prepend form-group has success has-feedback">
+					<label class="control-label" for="inputSuccess4"></label>
+				  	<input name="passwordc" type="password" class="form-control" placeholder= "Potvrda šifre" ng-model="user.password_confirmation" />
+				  	<span class="glyphicon glyphicon-lock form-control-feedback"></span>
 				</div>
 
 				<!--submit button-->
