--- a/app/assets/javascripts/templates/login.html.erb
+++ b/app/assets/javascripts/templates/login.html.erb
@@ -9,10 +9,10 @@
         <!--title-->
         <h1 class="text-center login-title">eSavjetovaliste</h1>
         <!--input email-->
-        <div class="form-group has success has-feedback">
+        <div class="input-prepend form-group has success has-feedback">
           <label class="control-label" for="inputSuccess4"></label>
           <input name="email" type="email" class="form-control" placeholder="E-mail" ng-model="user.email" required autofocus id="inputSuccess4">
-          <span class="glyphicon glyphicon-envelope form-control-feedback"></span><br>
+          <span class="glyphicon glyphicon-envelope form-control-feedback"></span></br></br>
           <!--email validation-->
           <span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
             <span ng-show="myForm.email.$error.required">Unos emaila je obavezan.</span>
@@ -25,7 +25,6 @@
           <label class="control-label" for="inputSuccess4"></label>
           <input name="password" type="password" minlength="3" class="form-control" placeholder="Šifra" ng-model="user.password"  required id="inputSuccess4">
           <span class="glyphicon glyphicon-lock form-control-feedback"></span><br>
-          <br>
           <!--password validation (client side)-->
           <span style="color:red" ng-show="myForm.password.$dirty && myForm.password.$invalid">
               <span ng-show="myForm.password.$error.required">Unos pasvorda je obavezan.</span>Pasvord mora imati više od 3 karaktera.
