--- a/app/assets/javascripts/templates/password-reset.html.erb
+++ b/app/assets/javascripts/templates/password-reset.html.erb
@@ -2,14 +2,15 @@
 <div class="container">
   <div class="bcg" style="height:600px">
     <div class="forgot-acc">
-      <form class="form-signin" name="myForm" ng-controller="ResetController">
+      <form class="form-signin form-inline" role="form" name="myForm" ng-controller="ResetController">
         <!--title-->
         <h1 class="text-center login-title">eSavjetovaliste</h1>
 
   			<!-- input email-->
-        <div class="input-prepend">
-          <span class="add-on"><i class="icon-envelope"></i></span>
-          <input name="email" type="email" class="formr-control" placeholder="E-mail" ng-model="user.email" required autofocus/><br>
+        <div class="input-prepend form-group has success has-feedback">
+          <label class="control-label" for="inputSuccess4"></label>
+          <input name="email" type="email" class="form-control" placeholder="E-mail" ng-model="user.email" required autofocus id="inputSuccess4"/>
+          <span class="glyphicon glyphicon-envelope form-control-feedback"></span></br></br>
           <!--email validation (client side)-->
           <span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
             <span ng-show="myForm.email.$error.required">Unos emaila je obavezan.</span>
