--- a/app/assets/javascripts/templates/questions.html.erb
+++ b/app/assets/javascripts/templates/questions.html.erb
@@ -1,5 +1,4 @@
-
-<section ng-controller="QuestionsController">
+<div classs="container"  ng-controller="QuestionsController">
     </br></br>
     <div class="pretraga">
       Pretraga: <input ng-model="query" class="form-control">
@@ -8,32 +7,31 @@
     </br>  
     <div style="text-align:center;">Trebate savjet? Postavite svoje pitanje <a href ng-click="newQuestion()">OVDJE</a>. </div>
     </br><br>
-    <table class="table table-hover table-condensed tabela">
-        <thead>
-            <tr>
-                <th> {{ 'QUESTION' | translate }}</th>
-                <th>{{ 'DSC' | translate }}</th>
-                <th>{{ 'CATEGORY' | translate }}</th>
-                <th>{{ 'USER' | translate }}</th>
-                <!--<th>Akcija</th>-->
-            </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="question in questions | filter:query">
-            <td> {{question.name}}</td>
-            <td> {{question.description}}</td>
-            <td> {{question.category.name}}</td>
-            <td> {{question.user.name}}</td>
-            <td>
-                <!--
-                <div class="actions">
-                    <button class="btn btn-primary btn-usr-mng" ng-click="deleteQuestion(question.id, $index)">
-                        Obriši
-                    </button>
+    <div class="row">
+        <div class="col-lg-2 col-md-2"></div>
+        <div class="col-lg-8 col-md-8">
+            <div class="list-group">
+              <a href="#" class="list-group-item" ng-repeat="question in questions | filter:query">
+               <div class="row">
+                   <div class="col-lg-10 col-md-10">
+                        <h4 class="list-group-item-heading"> {{question.name}}?</h4>
+                        <p class="list-group-item-text"><span class="glyphicon glyphicon-pencil"></span> {{ question.user.name }} &nbsp&nbsp<span class="glyphicon glyphicon-time"></span> {{ question.created_at }}
+                        <br>
+                        Kategorija: {{ question.category.name }} </p>
+                    </div>
+                    <div class="col-lg-2 col-md-2">Komentara: {{question.number_of_comments}}</div>
                 </div>
-                -->
-            </td>
-          </tr>
-    </table>
+              </a>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-2"></div>
+    </div>
+    <!-- Brisanje za admina
+    <div class="actions">
+        <button class="btn btn-primary btn-usr-mng" ng-click="deleteQuestion(question.id, $index)">
+            Obriši
+        </button>
+    </div>
+    -->
     <div id="copyright">© Copyright 2015</div>
-</section>
+</div>
