--- a/app/assets/javascripts/templates/questions.html.erb
+++ b/app/assets/javascripts/templates/questions.html.erb
@@ -11,15 +11,24 @@
         <div class="col-lg-2 col-md-2"></div>
         <div class="col-lg-8 col-md-8">
             <div class="list-group">
-              <a href="#" class="list-group-item" ng-repeat="question in questions | filter:query">
+              <div class="list-group-item active">
+                  <div class="row">
+                    <div class="col-lg-8 col-md-8">Teme</div>
+                    <div class="col-lg-2 col-md-2" style="text-align:center;">Kategorija</div>
+                    <div class="col-lg-2 col-md-2" style="text-align:center;">Odgovori</div>
+                  </div>
+              </div>
+              <a href ng-click="showQuestion(question.id)" class="list-group-item" ng-repeat="question in questions | filter:query">
                <div class="row">
-                   <div class="col-lg-10 col-md-10">
+                   <div class="col-lg-8 col-md-8">
                         <h4 class="list-group-item-heading"> {{question.name}}?</h4>
-                        <p class="list-group-item-text"><span class="glyphicon glyphicon-pencil"></span> {{ question.user.name }} &nbsp&nbsp<span class="glyphicon glyphicon-time"></span> {{ question.created_at }}
+                        <p class="list-group-item-text" style="font-size:11px;margin-top:10px;"><span class="glyphicon glyphicon-pencil"></span> 
+                        {{ question.user.name}} {{ question.user.surname}} &nbsp&nbsp&nbsp
+                        <span class="glyphicon glyphicon-time"></span> {{ question.time_created }}
                         <br>
-                        Kategorija: {{ question.category.name }} </p>
                     </div>
-                    <div class="col-lg-2 col-md-2">Komentara: {{question.number_of_comments}}</div>
+                    <div class="col-lg-2 col-md-2" style="text-align:center;"> {{ question.category.name }} </div>
+                    <div class="col-lg-2 col-md-2" style="text-align:center;"> {{question.number_of_comments}}</div>
                 </div>
               </a>
             </div>
