--- a/app/assets/javascripts/templates/charts.html.erb
+++ b/app/assets/javascripts/templates/charts.html.erb
@@ -2,6 +2,7 @@
 	<div ng-controller="ChartsController">
 		<div class="row">
 			<div class="col-lg-3 col-md-3">
+			<h2 style="text-align:center;"> Feedback </h2><br>
 			  <nvd3 options="options_pie"
 			      data="data_pie"
 			      config="config_pie">
